syntax="proto3";
package greet;


message Greeting{
	string first_name=1;
	string last_name=2;

}

message GreetingRequest{
	Greeting greeting=1;
}

message GreetingResponse{
	string result=1;
}


message GreetingManytimesRequest{
	Greeting greeting=1;
}
message GreetingManyTimesResponse{
	string result=1;
}


message LongGreetRequest{
	Greeting greeting=1;
}
message LongGreetResponse{
	string result=1;
}


service GreetingService{
	// Unary Api
 rpc Greet(GreetingRequest) returns (GreetingResponse){}

 // Server Streaming 
 rpc GreetManyTimes(GreetingManytimesRequest) returns(stream GreetingManyTimesResponse){}

 // Client Streaming
 rpc LongGreet(stream LongGreetRequest) returns (LongGreetResponse){}

}